; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/comctl32/extr_taskdialog.c_dialogunits_to_pixels.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/comctl32/extr_taskdialog.c_dialogunits_to_pixels.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.taskdialog_template_desc = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.taskdialog_template_desc*, i32*, i32*)* @dialogunits_to_pixels to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @dialogunits_to_pixels(%struct.taskdialog_template_desc* %0, i32* %1, i32* %2) #0 {
  %4 = alloca %struct.taskdialog_template_desc*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  store %struct.taskdialog_template_desc* %0, %struct.taskdialog_template_desc** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32* %2, i32** %6, align 8
  %7 = load i32*, i32** %5, align 8
  %8 = icmp ne i32* %7, null
  br i1 %8, label %9, label %17

9:                                                ; preds = %3
  %10 = load i32*, i32** %5, align 8
  %11 = load i32, i32* %10, align 4
  %12 = load %struct.taskdialog_template_desc*, %struct.taskdialog_template_desc** %4, align 8
  %13 = getelementptr inbounds %struct.taskdialog_template_desc, %struct.taskdialog_template_desc* %12, i32 0, i32 1
  %14 = load i32, i32* %13, align 4
  %15 = call i32 @MulDiv(i32 %11, i32 %14, i32 4)
  %16 = load i32*, i32** %5, align 8
  store i32 %15, i32* %16, align 4
  br label %17

17:                                               ; preds = %9, %3
  %18 = load i32*, i32** %6, align 8
  %19 = icmp ne i32* %18, null
  br i1 %19, label %20, label %28

20:                                               ; preds = %17
  %21 = load i32*, i32** %6, align 8
  %22 = load i32, i32* %21, align 4
  %23 = load %struct.taskdialog_template_desc*, %struct.taskdialog_template_desc** %4, align 8
  %24 = getelementptr inbounds %struct.taskdialog_template_desc, %struct.taskdialog_template_desc* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 4
  %26 = call i32 @MulDiv(i32 %22, i32 %25, i32 8)
  %27 = load i32*, i32** %6, align 8
  store i32 %26, i32* %27, align 4
  br label %28

28:                                               ; preds = %20, %17
  ret void
}

declare dso_local i32 @MulDiv(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
